# eider-py

./: .flake8  .gitattributes  .gitignore  .travis.yml  README.md  README.rst  eider.py  pyproject.toml  requirements-dev-py34.txt  requirements-dev.in  requirements-dev.txt  setup.py  test.bat  test.sh  tox.ini
.circleci/: config.yml
tests/: test_eider.py
